--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,18 +13,18 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+  <body class="text-center">
+    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+      <%= render 'shared/application_nav' %>
 
-    <%= render 'shared/nav', location: 'top' %>
+      <%= login_helper %>
+      
+      <%= yield %>
 
-    <%= login_helper %>
-    
-    <%= yield %>
+      <%= @copyright %>
 
-    <%= @copyright %>
+      <%= source_helper("application") %>
+    </div>
 
-    <%= source_helper("application") %>
   </body>
 </html>
