--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,12 +16,10 @@
   <body class="text-center">
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
       <%= render 'shared/application_nav' %>
-
-      <%= login_helper %>
       
       <%= yield %>
 
-      <%= @copyright %>
+      <%= render 'shared/application_footer' %>
 
       <%= source_helper("application") %>
     </div>
