--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -110,3 +110,20 @@ body {
 .mastfoot {
   color: rgba(255, 255, 255, .5);
 }
+
+/*
+ * Custom Styles
+ */
+
+ .card {
+   margin: auto
+ }
+
+ .card-body {
+   text-align: left;
+   color: black
+ }
+
+ .auth-links a {
+   color: black
+ }
