--- a/app/views/shared/_blog_header.html.erb
+++ b/app/views/shared/_blog_header.html.erb
@@ -1,9 +1,9 @@
 <div class='container'>
   <header class="blog-header py-3">
     <h3 class="pb-3 mb-4 font-italic border-bottom">
-      From the Firehose
+      My Blog
     </h3>
     <%= link_to 'Write a New Blog', new_blog_path if logged_in?(:site_admin) %>
-
   </header>
+
 </div>
