--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -19,7 +19,7 @@
 
     <main role="main">
 
-    <%= render 'shared/portfolio_header' %>
+    <%= render 'shared/portfolio_header' unless logged_in?(:site_admin) %>
       
       <%= yield %>
 
