--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,12 +1,26 @@
-<br>
-<%= image_tag @portfolio_item.main_image unless @portfolio_item.thumb_image.nil? %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-7">
+      <%= image_tag @portfolio_item.main_image unless @portfolio_item.thumb_image.nil? %>
+    </div>
+    <div class="col-md-5">
+      <h1><%= @portfolio_item.title%></h1>
 
-<h1><%= @portfolio_item.title%></h1>
-<em><%= @portfolio_item.subtitle%></em>
-<p><%= @portfolio_item.body%></p>
+      <hr>
 
-<h2>Technologies used:</h2>
+      <em><%= @portfolio_item.subtitle%></em>
 
-<% @portfolio_item.technologies.each do |t| %>
-  <p><%= t.name %></p>
-<% end %>
+      <p><%= @portfolio_item.body%></p>
+
+      <% if (@portfolio_item.technologies.length > 0) %>
+        <hr>
+        
+        <h2>Technologies used:</h2>
+        <% @portfolio_item.technologies.each do |t| %>
+          <p><%= t.name %></p>
+        <% end %>
+      <% end %>
+
+    </div>
+  </div>
+</div>
