utilize Rails 6.0 syntax: require + use dependencies over gemfile

--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,4 +1,6 @@
-@import "bootstrap";
+/*
+*= require bootstrap
+*/
 @import "font-awesome";
 /* stylelint-disable selector-list-comma-newline-after */
 
