--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,5 +1,4 @@
-<div class="col-md-4">
-  <div class="card mb-4 box-shadow">
+  <div class="card col-md-4 mb-4 box-shadow">
     <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
     <div class="card-body">
 
@@ -10,4 +9,3 @@
 
     </div>
   </div>
-</div>
