--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,8 @@
 
   <body class="text-center">
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column text center">
+      
+      <div id="background"></div>
       <%= render 'shared/application_nav' %>
       
       <%= yield %>
