add video + content

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 /*
 *= require bootstrap
 */
+@import "font-awesome";
 
 /*
  * Globals
@@ -153,10 +154,34 @@ body {
   z-index: -100;
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
-  background: image-url('background.jpg') no-repeat;
   background-size: cover;
 }
 
 .app-footer {
   color: white
+}
+
+.social-link {
+  font-size: 2em;
+  display: inline-block;
+  margin: 1em;
+}
+
+.about-me {
+  vertical-align: middle;
+}
+
+.border {
+  border: solid white 1px
+}
+
+.flex-vertical {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.about-me {
+  width: 90%;
+  margin: auto;
 }
