--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,5 +1,13 @@
-<h1>Pages#contact</h1>
+<h1>Contact</h1>
 
-<p><%= number_to_phone "1231231234" %></p>
+<p><%= fa_icon "phone"%> <%= number_to_phone "(303) 564-2132" %></p>
+
+<span>
+  <a class="social-link" href="#"><%= fa_icon "github"%></a>
+  <a class="social-link" href="#"><%= fa_icon "instagram"%></a>
+  <a class="social-link" href="#"><%= fa_icon "facebook"%></a>
+  <a class="social-link" href="#"><%= fa_icon "twitter"%></a>
+</span>
+
 
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d196281.88170854596!2d-104.99519442554607!3d39.764254753359765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876b80aa231f17cf%3A0x118ef4f8278a36d6!2sDenver%2C%20CO!5e0!3m2!1sen!2sus!4v1594682085337!5m2!1sen!2sus" width="450" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
