--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -6,7 +6,7 @@
   <div class="col-md-4">
     <%= image_tag 'profile_image.png', width: 250, alt: "Profile Image" %>
   </div>
-  <div class="col-md-8">
-    <p>Mechanical Engineer turned Back End Developer with a passion for finding solutions to the inefficiencies of the world. My experience in corporate engineering exposed me to the struggles of software incompatibilities and the lack of correct tools, all of which ignited a fire within me; a desire to solve these and other technical challenges</p>
+  <div class="col-md-8 flex-vertical">
+    <p class="about-me">Mechanical Engineer turned Back End Developer with a passion for finding solutions to the inefficiencies of the world. My experience in corporate engineering exposed me to the struggles of software incompatibilities and the lack of correct tools, all of which ignited a fire within me; a desire to solve these and other technical challenges</p>
   </div>
 </div>
