--- a/app/views/shared/_portfolio_header.html.erb
+++ b/app/views/shared/_portfolio_header.html.erb
@@ -1,7 +1,7 @@
 <section class="jumbotron text-center">
   <div class="container">
     <h1 class="jumbotron-heading">My Portfolio</h1>
-    <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+    <p class="lead text-muted">Someday, I'll actually have things in here</p>
     <p>
       <%= link_to 'Find Out More About Me', about_me_path, class: 'btn btn-primary my-s' %>
       <%= link_to 'My Blog', blogs_path, class: 'btn btn-secondary my-2' %>
