--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,5 +1,5 @@
 <div class="card col-md-4 mb-4 box-shadow" data-id="<%= portfolio_item.id %>">
-  <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
+  <%= image_tag portfolio_item.thumb_image.url unless portfolio_item.thumb_image.nil? %>
   <div class="card-body">
 
     <p class="card-text">
