--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -42,7 +42,7 @@
       <% end %>
 
       <div>
-        <%= link_to_add_assoication 'Add Technology', form, :technologies %>
+        <%= link_to_add_association 'Add Technology', form, :technologies %>
       </div>
     </div>
 
