--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -2,6 +2,7 @@
 *= require bootstrap
 */
 @import "font-awesome";
+@import "gritter";
 /* stylelint-disable selector-list-comma-newline-after */
 
 .blog-header {
