add gritter functionality

--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,7 +1,8 @@
 <%= form_for(@portfolio_item) do |form| %>
+
   <% if @portfolio_item.errors.any? %>
     <% @portfolio_item.errors.full_messages.each do |error| %>
-      <%= js add_gritter(error, title: "Ryan McNeil Portfolio", time: 2000) %>
+      <%= alert_generator error %>
     <% end %>
   <% end %>
 
