--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -138,6 +138,7 @@ h1, h2, h3, h4, h5, h6 {
  * Footer
  */
 .blog-footer {
+  margin-top: 20px;
   padding: 2.5rem 0;
   color: #999;
   text-align: center;
@@ -154,4 +155,18 @@ h1, h2, h3, h4, h5, h6 {
 
  .social-links li {
    font-size: 1.5em;
+ }
+
+ .comment-card > .card {
+   padding: 5px;;
+   margin-top: 15px;
+ }
+
+ .comment-attribution {
+   font-size: .8em;
+   font-style: italic;
+ }
+
+ .comment-name {
+   font-weight: 700;
  }
