--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column text center">
       
       <%= video_tag(
-        'cover_vid',
+        'cover_vid.mp4',
         id: 'background',
         autoplay: true,
         loop: true,
